<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="de.deliveryhero.mailordercoffeeshop.orderoverview.OrderOverviewViewModel" />
        <variable
            name="listeners"
            type="de.deliveryhero.mailordercoffeeshop.orderoverview.OrderOverviewActivity.Listeners"/>
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/secondaryDarkColor"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:background="@drawable/background_turquoise"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/beverage_detail_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:clipToPadding="false">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/beverage_detail_ingredients_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/secondaryColor"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintBottom_toTopOf="@id/input_details_container"
                android:layout_marginBottom="16dp">

                <TextView
                    android:id="@+id/beverage_detail_title"
                   android:paddingLeft="16dp"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"
                    android:paddingRight="16dp"
                    android:background="@color/primaryDarkColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@android:color/white"
                    android:text="@{viewModel.orderName}"
                    tools:text="Title"
                    app:layout_constraintBottom_toTopOf="@id/beverage_detail_volume_drawable"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.1" />

                <ImageView
                    android:id="@+id/beverage_detail_volume_drawable"
                    android:layout_width="128dp"
                    android:layout_height="96dp"
                    app:setDrawable="@{viewModel.beverageDetailVolumeDrawableResource}"
                    app:layout_constraintBottom_toTopOf="@id/beverage_detail_volume_text"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

                <TextView
                    android:id="@+id/beverage_detail_volume_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="32dp"
                    android:gravity="center_horizontal"
                    android:textAllCaps="true"
                    tools:text="420 ml."
                    android:text="@{viewModel.volumeText}"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toTopOf="@id/beverage_detail_ingredients" />

                <TextView
                    android:id="@+id/beverage_detail_ingredients"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="32dp"
                    android:layout_marginRight="32dp"
                    android:layout_marginBottom="32dp"
                    android:textAlignment="center"
                    android:text="@{viewModel.beverageDetailIngredientsListing}"
                    tools:text="Ingredients\n2 shots of Espresso\nScalded Soy\nChocolate"
                    android:textColor="@android:color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:layout_width="0px"
                android:layout_height="0px"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintTop_toBottomOf="@id/beverage_detail_ingredients_container"
                app:layout_constraintBottom_toTopOf="@id/mail_order_button"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.constraintlayout.widget.ConstraintLayout

                android:id="@+id/input_details_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rectangle_rounded_white"
                android:padding="16dp"
                android:elevation="8dp"
                android:layout_marginBottom="16dp"
                app:layout_constraintVertical_bias="0"
                app:layout_constraintTop_toBottomOf="@id/beverage_detail_ingredients_container"
                app:layout_constraintBottom_toTopOf="@id/mail_order_button">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/name_input_layout"
                    style="@style/textViewStyling"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/editTextLayoutStyling"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/MyErrorText"
                    app:errorText="@{viewModel.customerNameInputError}"
                    app:hintEnabled="false"
                    app:hintTextAppearance="@style/MyHintText"
                    app:layout_constraintBottom_toTopOf="@id/email_input_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/name_text_box"
                        style="@style/editTextViewStyling"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top|left"
                        android:hint="@string/name_edit_text_hint"
                        android:text="@={viewModel.customerNameTextBox}"
                        app:focusChange="@{listeners.customerNameOnFocusChangeListener}"
                        android:inputType="text"
                        android:lines="8"
                        android:maxLines="10"
                        android:minLines="6"
                        android:scrollbars="vertical"
                        android:textColorHint="@android:color/darker_gray"
                        android:nextFocusUp="@id/email_text_box"
                        android:nextFocusLeft="@id/email_text_box"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/editTextLayoutStyling"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/MyErrorText"
                    app:errorText="@{viewModel.emailInputError}"
                    app:hintEnabled="false"
                    app:hintTextAppearance="@style/MyHintText"
                    app:layout_constraintBottom_toTopOf="@id/custom_order_name_input_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_text_box"
                        style="@style/editTextViewStyling"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top|left"
                        android:text="@={viewModel.emailTextBox}"
                        android:hint="@string/email_address_edit_text_hint"
                        app:focusChange="@{listeners.emailOnFocusChangeListener}"
                        android:inputType="text"
                        android:lines="8"
                        android:maxLines="10"
                        android:minLines="6"
                        android:scrollbars="vertical"
                        android:textColorHint="@android:color/darker_gray"
                        android:nextFocusUp="@id/custom_order_name_box"
                        android:nextFocusLeft="@id/custom_order_name_box"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/custom_order_name_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/editTextLayoutStyling"
                    app:errorEnabled="true"
                    app:errorTextAppearance="@style/MyErrorText"
                    app:errorText="@{viewModel.customOrderNameInputError}"
                    app:hintEnabled="false"
                    app:showView="@{viewModel.isCustomOrder}"
                    app:hintTextAppearance="@style/MyHintText"
                    app:layout_constraintBottom_toBottomOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/custom_order_name_box"
                        style="@style/editTextViewStyling"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="top|left"
                        android:hint="@string/custom_order_name_edit_text_hint"
                        android:text="@={viewModel.customOrderNameTextBox}"
                        android:inputType="text"
                        app:focusChange="@{listeners.customOrderNameOnFocusChangeListener}"
                        android:lines="8"
                        android:maxLines="10"
                        android:minLines="6"
                        android:scrollbars="vertical"
                        android:textColorHint="@android:color/darker_gray"
                        android:nextFocusUp="@id/name_text_box"
                        android:nextFocusLeft="@id/name_text_box"/>
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/mail_order_button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginBottom="16dp"
                android:text="@string/submit_order_button"
                android:onClick="@{listeners.submitOrderListener}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>
