<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="de.deliveryhero.mailordercoffeeshop.order.OrderViewModel" />
       <variable
           name="handlers"
           type="de.deliveryhero.mailordercoffeeshop.order.customorder.CustomOrderFragment.Handlers"/>
          </data>

    <ScrollView
        android:id="@+id/custom_order_scrollview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background_turquoise"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:paddingLeft="16dp"
            android:paddingRight="16dp">

            <TextView
                android:id="@+id/custom_order_title"
                style="@style/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/custom_order_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/coffee_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/rectangle_rounded_white"
                android:elevation="8dp"
                android:padding="16dp"
                android:visibility="visible"
                app:layout_constraintTop_toBottomOf="@id/custom_order_title">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/espresso_shot_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <Button
                        android:id="@+id/less_espresso"
                        android:layout_width="88dp"
                        android:layout_height="48dp"
                        android:layout_marginLeft="32dp"
                        android:layout_marginTop="16dp"
                        android:elevation="8dp"
                        android:gravity="center"
                        android:padding="2dp"
                        android:text="-"
                        android:onClick="@{handlers.detractEspressoShotListener}"
                        android:textAlignment="gravity"
                        android:textStyle="bold"
                        app:layout_constraintHorizontal_bias="1"
                        app:layout_constraintLeft_toRightOf="@id/espresso_shot_counter"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/more_espresso" />

                    <TextView
                        android:id="@+id/espresso_shot_counter"
                        style="@style/textViewStyling"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="16dp"
                        app:layout_constraintBottom_toBottomOf="@id/less_espresso"
                        app:layout_constraintEnd_toStartOf="@id/more_espresso"
                        app:layout_constraintStart_toEndOf="@id/espresso_shot_text"
                        app:layout_constraintTop_toTopOf="@id/more_espresso"
                        app:shotCounter="@{viewModel.espressoShotCounter}"
                        tools:text="42"

                        />

                    <Button
                        android:id="@+id/more_espresso"
                        android:layout_width="88dp"
                        android:layout_height="48dp"
                        android:layout_marginLeft="32dp"
                        android:elevation="8dp"
                        android:gravity="center"
                        android:padding="2dp"
                        android:text="+"
                        android:textAlignment="gravity"
                        android:textStyle="bold"
                        android:onClick="@{handlers.addEspressoShotListener}"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1"
                        app:layout_constraintLeft_toRightOf="@id/espresso_shot_counter"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/espresso_shot_text"
                        style="@style/textViewStyling"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/espresso_shot_counter_text"
                        app:layout_constraintBottom_toBottomOf="@id/less_espresso"
                        app:layout_constraintEnd_toStartOf="@id/espresso_shot_counter"
                        app:layout_constraintHorizontal_bias="1"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@id/more_espresso" />


                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/beverage_temperature"
                    style="@style/textViewStyling"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:checked="@={viewModel.hotCoffee}"
                    android:text="Hot"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/espresso_shot_container" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/extras_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/rectangle_rounded_white"
                android:elevation="8dp"
                android:padding="16dp"
                android:visibility="visible"
                app:layout_constraintTop_toBottomOf="@id/coffee_container">

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/chocolate"
                    style="@style/textViewStyling"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:button="@null"
                    android:checked="@={viewModel.chocolate}"
                    android:drawableRight="?android:attr/listChoiceIndicatorMultiple"
                    android:text="Chocolate"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/spinner_text"
                    style="@style/textViewStyling"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginRight="16dp"
                    android:text="Milk selection"
                    app:layout_constraintBottom_toTopOf="@id/milk_options_container"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/chocolate" />

                <Spinner
                    android:id="@+id/milk_type"
                    style="@style/textViewStyling"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="16dp"
                    app:spinnerAdapter="@{handlers.spinnerAdapter}"
                    app:spinnerSelected="@{handlers.spinnerListener}"
                    app:layout_constraintBottom_toTopOf="@id/milk_options_container"
                    app:layout_constraintHorizontal_bias="1"
                    app:layout_constraintLeft_toRightOf="@id/spinner_text"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/chocolate" />


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/milk_options_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:showView="@{viewModel.showMilkOptions}"
                    app:layout_constraintTop_toBottomOf="@id/milk_type">

                    <SeekBar
                        android:id="@+id/simpleSeekBar"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:clipToPadding="false"
                        android:max="40"
                        app:seekBarChange="@{handlers.seekBarOnChangeListener}"
                        android:paddingTop="8dp"
                        android:paddingBottom="8dp"
                        app:showView="@{viewModel.showCustomFatPercentageControls}"
                        app:layout_constraintBottom_toTopOf="@id/custom_fat_percentage_text"
                        app:layout_constraintLeft_toLeftOf="parent" />

                    <TextView
                        android:id="@+id/custom_fat_percentage_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@{viewModel.milkFatPercentageText}"
                        android:textAlignment="gravity"
                        app:showView="@{viewModel.showCustomFatPercentageControls}"
                        app:layout_constraintBottom_toTopOf="@id/milk_spacer"
                        app:layout_constraintLeft_toLeftOf="parent"
                        tools:text="Milk fat percentage 32%" />

                    <View
                        android:id="@+id/milk_spacer"
                        android:layout_width="0dp"
                        android:layout_height="1dp"
                        android:layout_marginTop="32dp"
                        android:background="@color/lightGray"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/custom_fat_percentage_text" />

                    <RadioGroup
                        android:id="@+id/radio_group"
                        style="@style/textViewStyling"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginRight="8dp"
                        android:orientation="vertical"
                        android:paddingBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/milk_spacer">

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="@={viewModel.steamedMilk}"
                            android:layoutDirection="rtl"
                            android:text="Steamed" />

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="@={viewModel.foamedMilk}"
                            android:layoutDirection="rtl"
                            android:text="Foamed" />

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="@={viewModel.whippedMilk}"
                            android:layoutDirection="rtl"
                            android:text="Whipped" />

                        <RadioButton
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:checked="@={viewModel.scaldedMilk}"
                            android:layoutDirection="rtl"
                            android:text="Scalded" />
                    </RadioGroup>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/review_order_button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/review_order_button"
                android:onClick="@{handlers.reviewOrderListener}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/extras_container"
                app:layout_constraintVertical_bias="1" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>
